Source/WebCore/platform/graphics/FormatConverter.cpp
@@ -35,6 +35,10 @@
 #include "GraphicsContext3DNEON.h"
 #endif
 
+#if USE(ACCELERATE)
+#include <Accelerate/Accelerate.h>
+#endif
+
 namespace WebCore {
 
 
@@ -1241,6 +1245,9 @@ ALWAYS_INLINE_EXCEPT_MSVC void FormatConverter::convert()
 
     const SrcType *srcRowStart = static_cast<const SrcType*>(m_srcStart);
     DstType* dstRowStart = static_cast<DstType*>(m_dstStart);
+    
+    m_success = true;
+    
     if (!trivialUnpack && trivialPack) {
         for (size_t i = 0; i < m_height; ++i) {
             unpack<SrcFormat>(srcRowStart, dstRowStart, m_width);
@@ -1255,14 +1262,33 @@ ALWAYS_INLINE_EXCEPT_MSVC void FormatConverter::convert()
             dstRowStart += dstStrideInElements;
         }
     } else {
+#if USE(ACCELERATE)
+        if (SrcFormat == GraphicsContext3D::DataFormatRGBA8
+            && DstFormat == GraphicsContext3D::DataFormatRGBA8
+            && alphaOp == GraphicsContext3D::AlphaDoUnmultiply) {
+            vImage_Buffer src;
+            src.width = m_width;
+            src.height = m_height;
+            src.rowBytes = m_srcStride;
+            src.data = const_cast<void*>(m_srcStart);
+
+            vImage_Buffer dst;
+            dst.width = m_width;
+            dst.height = m_height;
+            dst.rowBytes = m_dstStride;
+            dst.data = m_dstStart;
+
+            vImageUnpremultiplyData_RGBA8888(&src, &dst, kvImageNoFlags);
+            
+            return;
+        }
+#endif
         for (size_t i = 0; i < m_height; ++i) {
             pack<DstFormat, alphaOp>(srcRowStart, dstRowStart, m_width);
             srcRowStart += srcStrideInElements;
             dstRowStart += dstStrideInElements;
         }
     }
-    m_success = true;
-    return;
 }
 
 } // namespace WebCore
